# ebay-shipping-ops

./: .env.example  CLAUDE.md  README.md  get_token.py  pyproject.toml
docs/: process-flow.md
docs/plans/: 2026-02-26-dashboard-design.md  2026-02-26-dashboard-impl.md  2026-02-28-schedule-pickup-fix.md
ebay_shipper/: dashboard.py  ebay_auth.py  label_provider.py  main.py  order_poller.py  packing_list.py  printer.py
ebay_shipper/templates/: index.html
tests/: test_dashboard.py  test_label_provider.py  test_order_poller.py  test_packing_list.py  test_pickup.py  test_printer.py
