[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebay-shipper"
version = "0.1.0"
description = "Automated eBay order detection, packing list + shipping label generation"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "reportlab>=4.0.0",
    "easypost>=10.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ebay-shipper = "ebay_shipper.main:main"
